@@ -7,6 +7,8 @@ Changes since v2.3
 
 o Added a "right-click" menu to the bookmarks window.
 
+o Added printing support.
+
 Changes since v2.2
 ==================
 
